# 2d-render-engine-opengl

./: CMakeLists.txt  README.md
include/: app.hpp  planet.hpp  shape.hpp  utils.hpp  vector2d.hpp
include/glad/: glad.h
shaders/: frag.glsl  vertex.glsl
src/: app.cpp  glad.c  main.cpp  planet.cpp  shape.cpp  utils.cpp
